2001-01-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-sysdep.c (_dl_sysdep_start): If HAVE_AUX_XID is
	defined don't look whether the AT_*ID values were set.
	If HAVE_AUX_PAGESIZE is defined don't look whether the pagesize is set.
	(_dl_show_auxv): Rewrite to avoid switch statement.
	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_AT_PAGESIZE for kernel >= 2.4.1.
	* sysdeps/unix/sysv/linux/ldsodefs.h: Define HAVE_AUX_XID.
	Define HAVE_AUX_PAGESIZE if __ASSUME_AT_PAGESIZE is defined.

	* sysdeps/unix/sysv/linux/fxstat64.c: Add one __builtin_expect.
	* sysdeps/unix/sysv/linux/lxstat64.c: Likewise.
	* sysdeps/unix/sysv/linux/xstat64.c: Likewise.

	* elf/rtld.c (process_envvars): Call __strtoul_internal instead of
	strtoul.
	* elf/dl-minimal.c (strtol, __strtol_internal, strtoul): Removed.
	(__sigjmp_save): Set __mask_was_saved to zero since we don't save
	anything.
	* dlfcn/eval.c (__strtol_internal): Define here.
	(eval): Use __strtol_internal instead of strtol.

	* elf/elf.h: Add a few more EF_MIPS_* constants.

2001-01-17  Ulrich Drepper  <drepper@redhat.com>

	* manual/Makefile (chapters): Add debug.
	* manual/debug.texi: New file.
	* manual/examples/execinfo.c: New file.
	Patch by suckfish@ihug.co.nz.

2001-01-17  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/bits/byteswap.h (__bswap_32): Add cast to avoid
	invalid asm.

2001-01-17  Andreas Jaeger  <aj@suse.de>

	* nscd/connections.c (nscd_run): Use proper format specifier.

2001-01-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/dl-procinfo.h: Move x86_cap_flags and
	x86_platforms data into new file after prepending _dl_.  Change
	users.
	* sysdeps/unix/sysv/linux/i386/dl-procinfo.c: New file.
	* sysdeps/unix/sysv/linux/i386/Dist: Add dl-procinfo.c.
	* sysdeps/unix/sysv/linux/i386/Makefile: Add rules to build
	dl-procinfo.c.

	* setjmp/setjmp.h: Cleanup definition of setjmp macro.

	* sysdeps/i386/elf/bsd-setjmp.S: Real implementation.